Added JSX live code editor

--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.4",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hello-pangea/dnd": "^16.6.0",
     "@monaco-editor/react": "^4.6.0",
-    "@mui/icons-material": "^5.16.0",
-    "@mui/material": "^5.16.0",
+    "@mui/icons-material": "^5.17.1",
+    "@mui/material": "^5.17.1",
     "ace-builds": "^1.35.2",
     "babylon": "^6.18.0",
     "mongodb": "^6.8.0",
@@ -31,6 +31,7 @@
     "react-icons": "^5.2.1",
     "react-live": "^4.1.7",
     "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^11.0.5",
     "simple-icons": "^13.1.0",
     "svix": "^1.25.0",
     "uuid": "^10.0.0"
@@ -42,6 +43,7 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/react-toastify": "^4.0.2",
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
